# multiplayer-fabric-zone-console

./: .env.sample  .gitignore  .gitrepo  AGENTS.md  CONTRIBUTING.md  mix.exs
.github/workflows/: ci.yml
config/: config.exs  prod.exs  runtime.exs  test.exs
lib/: zone_console.ex
lib/mix/tasks/: zone_console.ex
lib/zone_console/: access_kit.ex  app.ex  cli.ex  console_connection_handler.ex  console_stream_handler.ex  fabric_mmog_keystore.ex  keychain.ex  uro_client.ex  zone_client.ex
lib/zone_console/keychain/: mock.ex  nif.ex
native/keychain_nif/: Cargo.toml
native/keychain_nif/src/: lib.rs
test/: test_helper.exs
test/zone_console/: fabric_mmog_keystore_test.exs  instance_command_test.exs  keychain_test.exs  multi_platform_test.exs  round_trip_test.exs  uro_client_bake_test.exs  uro_client_login_test.exs  uro_client_manifest_test.exs  uro_client_upload_test.exs  zone_client_encoding_test.exs  zone_handler_test.exs  zone_lifecycle_test.exs
